@@ -1,0 +1,147 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<GCompris>
+<Wordlist name="default-he" description="Default Hebrew" locale="he">
+<level value="1">
+אות
+אמא
+דגל
+סבא
+בית
+יפה
+רמי
+דני
+חנה
+אסי
+תמי
+עבה
+סכה
+חסה
+בצל
+סלם
+צב
+גזר
+שבת
+דג
+הר
+ים
+שפן
+נמר
+גמל
+שור
+פרח
+חצב
+טוב
+חלב
+מרק
+רגל
+בשר
+חול
+קיר
+טל
+פיל
+פנס
+כוס
+פרה
+תיק
+
+</level>
+<level value="2">
+בננה
+חלום
+שלום
+ספור
+כתה
+יואב
+טובה
+חסידה
+דגים
+תפוח
+שופר
+אדמה
+מתנה
+נמלה
+גדול
+נקבה
+שחמט
+דמקה
+נרקיס
+כלנית
+זברה
+כדור
+סבתא
+מורה
+משחק
+עכשו
+עגיות
+כובע
+פרפר
+קפוד
+קביות
+תותים
+סכריה
+סוס
+שוקו
+קומה
+תפוז
+כיסה
+תוכי
+פורים
+חנכה
+פסח
+
+</level>
+<level value="3">
+אקורדיון
+אויר
+מטוס
+אוירון
+אזעקה
+כל
+שקר
+תמיד
+אמבולנס
+נמלה
+דירה
+כרסה
+צבא
+דודה
+סתו
+תינוק
+תרמיל
+כדור
+בננה
+ספר
+סל
+דבורה
+חפושית
+קלמנטינה
+מזמרה
+כרובית
+בקבוק
+מטאטא
+מצלמה
+אוטובוס
+ברוז
+ספגניה
+מעטפה
+משקפת
+משפחה
+אשכולית
+תרנגלת
+זריקה
+מנורה
+מנעול
+מחברת
+אופנוע
+אפרסק
+פסנתר
+תלמיד
+שבועות
+טלויזיה
+משרוקית
+נחליאלי
+אתמול
+זברה
+</level>
+</Wordlist>
+</GCompris>
