@@ -1,16 +1,20 @@
+2008-10-05  Bruno Coudoin <bruno.coudoin@free.fr>
+
+	* he.po: Updated Hebrew translation by Jorge Mariano.
+
 2008-10-04  Kostas Papadimas <pkst@gmx.net>
 
 	* el.po: Updated Greek translation by Yannis Kaskamanidis <ttnfy17@yahoo.gr>
 
-2007-10-03  Bruno Coudoin <bruno.coudoin@free.fr>
+2008-10-03  Bruno Coudoin <bruno.coudoin@free.fr>
 
 	* he.po: Updated Hebrew translation by Jorge Mariano.
 
-2007-10-01  Bruno Coudoin <bruno.coudoin@free.fr>
+2008-10-01  Bruno Coudoin <bruno.coudoin@free.fr>
 
 	* he.po: Updated Hebrew translation by Jorge Mariano.
 
-2007-09-18  Bruno Coudoin <bruno.coudoin@free.fr>
+2008-09-18  Bruno Coudoin <bruno.coudoin@free.fr>
 
 	* he.po: Updated Hebrew translation by Jorge Mariano.
 
