@@ -1,3 +1,7 @@
+2008-10-05  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/wordsgame/default-he.xml: Created Hebrew words by Jorge Mariano.
+
 2008-09-23  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Bug http://bugzilla.gnome.org/show_bug.cgi?id=520829
